# raylib-squirrel

./: CMakeLists.txt  LICENSE  README.md
cmake/: FindRaylib.cmake  FindSquall.cmake  FindSquirrel.cmake
examples/: CMakeLists.txt
examples/core/: core_basic_window.nut
examples/textures/: textures_bunnymark.nut
include/: CMakeLists.txt  raylib-squirrel.hpp
tests/: CMakeLists.txt  raylib-squirrel-test.cpp
